--- a/fresa.org
+++ b/fresa.org
@@ -47,7 +47,7 @@ Major version log:
 #+begin_src julia
   module Fresa
 
-  version = "2016.11.18 08:30:08"
+  version = "2016.11.18 09:02:34"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -72,7 +72,21 @@ Major version log:
 #+name: fitness
 #+begin_src julia
   function fitness(pop)
-      s = sortperm(map(x->x[n+1]))
+      k, l = size(pop)
+      global m = k-n-1
+      println(": $m objective functions with $l members in population")
+      if 1 == m
+          s = sortperm(pop[n+1,:])
+          zmin = pop[n+1,s[1]]
+          zmax = pop[n+1,s[length(s)]]
+          println(": objective function values in [$zmin,$zmax]")
+          f = tanh((zmax - pop[n+1,:]) / (zmax - zmin) - 0.5)+0.5
+          println("Fitness $f")
+      else
+          error("Fresa not imlemented for multi-objective optimisation, nz=$M, yet.")
+      end
+      f
+  end
 #+end_src 
 ** neighbour -- default for real valued decision vectors
 #+name: neighbour
@@ -101,10 +115,12 @@ Mostly for testing as bounds will form part of the main method call.
   function solve(f,x0,a,b)
       setbounds(a,b)
       z, g = f(x0)
-      println("f($x0) = $z with constraint $g")
+      println(": f($x0) = $z with constraint $g")
+      m = length(z)
+      println(": there are $m objective functions.")
       pop = [x0;z;g]
       for gen in 1:ngen
-          println("generation $gen")
+          println(": generation $gen")
           f = fitness(pop)
           for i in 1:max(length(pop),ngen)
               s = select(pop,f)
@@ -153,8 +169,21 @@ This test uses a simple quadratic objective function, defined inline in the invo
   x0 = 0.5*ones(2,1)
   a = zeros(2,1)
   b = 10*ones(2,1)
-  Fresa.solve(x -> ((x[1]-3)^2+(x[2]-5)^2+8, 0),
-              x0, a, b)
+  Fresa.setbounds(a,b)
+  f(x) = ((x[1]-3)^2+(x[2]-5)^2+8, 0)
+  z, g = f(x0)
+  pop = [x0;z;g]
+  for i in 1:5
+      x = Fresa.neighbour(x0,0.5)
+      z, g = f(x)
+      pop = hcat(pop, [x;z;g])
+      npop = size(pop)
+      l = length(pop)
+      println("Population size $npop with length $l")
+  end
+  println("Population $pop[3,:]")
+  Fresa.fitness(pop)
+  #Fresa.solve(f, x0, a, b)
 #+end_src 
 * Recent change history
 #+name: changehistoryshellblock
