--- a/fresa.org
+++ b/fresa.org
@@ -47,7 +47,7 @@ Major version log:
 #+begin_src julia
   module Fresa
 
-  version = "2016.11.18 09:02:34"
+  version = "2016.11.18 09:08:04"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -161,8 +161,31 @@ Mostly for testing as bounds will form part of the main method call.
       println("$n")
   end
 #+end_src
+** fitness test
+This test uses a simple quadratic objective function to test out the fitness evaluation.
+#+name: testfitness
+#+begin_src julia :tangle testfitness.jl
+  using Fresa
+  x0 = 0.5*ones(2,1)
+  a = zeros(2,1)
+  b = 10*ones(2,1)
+  Fresa.setbounds(a,b)
+  f(x) = ((x[1]-3)^2+(x[2]-5)^2+8, 0)
+  z, g = f(x0)
+  pop = [x0;z;g]
+  for i in 1:5
+      x = Fresa.neighbour(x0,0.5)
+      z, g = f(x)
+      pop = hcat(pop, [x;z;g])
+      npop = size(pop)
+      l = length(pop)
+      println("Population size $npop with length $l")
+  end
+  println("Population $pop[3,:]")
+  Fresa.fitness(pop)
+#+end_src 
 ** simple objective function
-This test uses a simple quadratic objective function, defined inline in the invocation of the ~solve~ method.  All points are feasible within the domain defined by the lower and upper bounds.  All /Fresa/ settings are the defaults.
+This test uses a simple quadratic objective function, defined within.  All points are feasible within the domain defined by the lower and upper bounds.  All /Fresa/ settings are the defaults.
 #+name: testsimple
 #+begin_src julia :tangle testsimple.jl
   using Fresa
