--- a/fresa.org
+++ b/fresa.org
@@ -47,7 +47,7 @@ Major version log:
 #+begin_src julia
   module Fresa
 
-  version = "2016.11.18 13:44:03"
+  version = "2016.11.18 13:50:35"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -132,6 +132,7 @@ Mostly for testing as bounds will form part of the main method call.
   end
 #+end_src
 ** solve -- use the PPA to solve the optimisation problem
+The function expects the objective function, ~f~, an initial guess, ~x0~, and lower, ~a~, and upper, ~b~, bounds.  It returns the optimum, the objective function value(s) at this point, the constraint at that point and the whole population at the end.
 #+name: solve
 #+begin_src julia
   function solve(f,x0,a,b)
@@ -170,7 +171,7 @@ Mostly for testing as bounds will form part of the main method call.
       fit = fitness(pop)
       index = sortperm(fit)
       best = pop[:,index[length(fit)]]
-      best, pop
+      best[1:n], best[n+1:n+m], best[n+m+1], pop
   end
 #+end_src 
 ** module end
@@ -232,11 +233,10 @@ This test uses a simple quadratic objective function, defined within.  All point
   x0 = 0.5*ones(2,1)
   a = zeros(2,1)
   b = 10*ones(2,1)
-  Fresa.setbounds(a,b)
   f(x) = ((x[1]-3)^2+(x[2]-5)^2+8, 0)
-  best, pop = Fresa.solve(f, x0, a, b)
+  bestx, bestz, bestg, pop = Fresa.solve(f, x0, a, b)
   println("Population at end: $pop")
-  println("Best solution is $best")
+  println("Best solution is f($bestx)=$bestz with g=$bestg")
 #+end_src 
 * Recent change history
 #+name: changehistoryshellblock
