--- a/fresa.org
+++ b/fresa.org
@@ -47,7 +47,7 @@ Major version log:
 #+begin_src julia
   module Fresa
 
-  version = "2016.11.18 16:35:38"
+  version = "2016.11.18 16:59:44"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -269,7 +269,7 @@ This test uses a simple quadratic objective function to test out the fitness eva
   a = zeros(2,1)
   b = 10*ones(2,1)
   Fresa.setbounds(a,b)
-  f(x) = ((x[1]-3)^2+(x[2]-5)^2+8, 0)
+  f = x -> ((x[1]-3)^2+(x[2]-5)^2+8, 0)
   z, g = f(x0)
   pop = [x0;z;g]
   for i in 1:5
@@ -296,8 +296,8 @@ This test uses a simple quadratic objective function to test out the fitness eva
   a = zeros(2,1)
   b = ones(2,1)
   x = rand(2,1)
-  f(x) = ( [sin(x[1]-x[2]); cos(x[1]+x[2])], 0)
-  pareto, population = Fresa.solve(f, x, a, b)
+  f = x -> ( [sin(x[1]-x[2]); cos(x[1]+x[2])], 0)
+  pareto, population = Fresa.solve(f, x, a, b; npop=100)
 
   println("Pareto front:")
   println(pareto)
@@ -314,10 +314,10 @@ This test uses a simple quadratic objective function to test out the fitness eva
   a = zeros(n,1)
   b = ones(n,1)
   x = zeros(n,1)
-  f(x) = ([ sum((x-0.5).^2+1)
-            sum(cos(x))
-            sum(sin(x))],
-          0)
+  f = x -> ([ sum((x-0.5).^2+1)
+              sum(cos(x))
+              sum(sin(x))],
+            0)
   pareto, population = Fresa.solve(f, x, a, b; npop=100, ngen=1000, output=100)
 
   println("Pareto front:")
@@ -327,6 +327,9 @@ This test uses a simple quadratic objective function to test out the fitness eva
   PyPlot.plot3D(pareto[n+1,:], pareto[n+2,:], pareto[n+3,:], "ro")
   PyPlot.savefig("x.pdf")
 #+end_src 
+
+#+results: testmultiobjective3
+
 ** pareto test
 #+name: testpareto
 #+begin_src julia :tangle testpareto.jl
@@ -334,7 +337,7 @@ This test uses a simple quadratic objective function to test out the fitness eva
   a = zeros(2,1)
   b = ones(2,1)
   x = rand(2,1)
-  f(x) = ( [sin(x[1]-x[2]); cos(x[1]+x[2])], 0)
+  f = x -> ( [sin(x[1]-x[2]); cos(x[1]+x[2])], 0)
   z, g = f(x)
   pop = [x; z; g]
   for i=1:9
@@ -355,7 +358,7 @@ This test uses a simple quadratic objective function, defined within.  All point
   x0 = 0.5*ones(2,1)
   a = zeros(2,1)
   b = 10*ones(2,1)
-  f(x) = ((x[1]-3)^2+(x[2]-5)^2+8, 0)
+  f = x -> ((x[1]-3)^2+(x[2]-5)^2+8, 0)
   bestx, bestz, bestg, pop = Fresa.solve(f, x0, a, b)
   println("Population at end: $pop")
   println("Best solution is f($bestx)=$bestz with g=$bestg")
