--- a/fresa.org
+++ b/fresa.org
@@ -48,7 +48,7 @@ A list [[*Recent change history][summary of recent change history]] is given bel
 #+begin_src julia
   module Fresa
 
-  version = "2016.11.20 10:08:36"
+  version = "2016.11.20 13:22:19"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -64,26 +64,54 @@ These are variables that are global to the module.
 #+end_src 
 ** fitness
 The fitness function used depends on the number of objectives.  For single criterion problems, the fitness is the objective function values normalised and reversed so that the minimum, /i.e./ the best solution, has a fitness of close to 1 and the worst a fitness close to 0.  For multi-criteria problems, a Hadamard product of individual criteria rankings is used to create a fitness value.  This is described in a soon to appear publication ([[http://www.springer.com/gb/book/9783319299730][Fraga & Amusat, 2016]]).
+
+This function uses a helper function, defined below, to assign a fitness to a vector of objective function values.
 #+name: fitness
 #+begin_src julia
   function fitness(pop)
       k, l = size(pop)
-      if 1 == m
-          s = sortperm(pop[n+1,:])
-          zmin = pop[n+1,s[1]]
-          zmax = pop[n+1,s[l]]
-          # println(": objective function values in range [$zmin,$zmax]")
+      m = k-n-1
+      indexfeasible = (1:l)[pop[k,:].<=0]
+      indexinfeasible = (1:l)[pop[k,:].>0]
+      feasible = view(pop,1:k,indexfeasible)
+      infeasible = view(pop,1:k,indexinfeasible)
+      println("There are $(length(indexfeasible)) feasible entries and $(length(indexinfeasible)) infeasible")
+      fit = zeros(l,1)
+      feasiblefit = vectorfitness(m, feasible[n+1:n+m,:])
+      if length(indexinfeasible) > 0
+          # scale up feasible solutions fitness
+          feasiblefit = feasiblefit/2 + 0.5 # upper half of fitness internval
+          infeasiblefit = vectorfitness(m, infeasible[n+1:n+m,:])/2; # lower half
+          fit[indexfeasible] = feasiblefit
+          fit[indexinfeasible] = infeasiblefit
+      else
+          fit = feasiblefit
+      end
+      fit
+  end
+#+end_src 
+
+#+name: vectorfitness
+#+begin_src julia
+  function vectorfitness(m,v)
+      println("VF: v=$v")
+      println("  : of size $(size(v))")
+      if m == 1                   # single objective 
+          l = length(v)
+          s = sortperm(v[1,:])
+          zmin = v[s[1]]
+          zmax = v[s[l]]
           if l == 1 || abs(zmax-zmin) < eps()
               fit = 0.5*ones(l)
           else
-              fit = tanh((zmax - pop[n+1,:]) / (zmax - zmin) - 0.5)+0.5
-              # println("Fitness $f")
+              # avoid extreme 0,1 values
+              fit = tanh((zmax - v) / (zmax - zmin) - 0.5)+0.5
           end
-      else
-          z = pop[n+1:n+m,:]
-          rank = ones(m,l);      #rank of each solution for each objective function 
+      else                  # multi-objective
+          m, l = size(v)
+          rank = ones(m,l); #rank of each solution for each objective function 
           for i=1:m
-              rank[i,sortperm(z[i,:])] = 1:l;
+              rank[i,sortperm(v[i,:])] = 1:l;
           end
           # hadamard product of ranks
           fitness = map(x->prod(x), rank[:,i] for i=1:l)
@@ -91,11 +119,14 @@ The fitness function used depends on the number of objectives.  For single crite
           if l == 1
               fit = [0.5]
           else
-              fit = 1 - fitness / maximum(fitness);
+              # avoid extreme 0,1 values
+              fit = tanh(0.5 - fitness / maximum(fitness)) + 0.5
           end
       end
+      println("VF: fit=$fit")
       fit
   end
+
 #+end_src 
 ** neighbour -- generate random point
 A random solution is generated with a distance from the original point being inversely proportional, in a stochastic sense, to the fitness of the solution.  The new point is possibly adjusted to ensure it lies within the domain defined by the lower and upper bounds.
